--- a/docs/overview.yaml
+++ b/docs/overview.yaml
@@ -416,3 +416,4 @@ Logic and computation:
     substructure: 'first_order.language.substructure'
     definable set: 'first_order.language.definable_set'
     elementary embedding: 'first_order.language.elementary_embedding'
+    Compactness theorem: 'first_order.language.Theory.is_satisfiable_iff_is_finitely_satisfiable'
