--- a/docs/undergrad.yaml
+++ b/docs/undergrad.yaml
@@ -58,7 +58,7 @@ Linear algebra:
   Structure theory of endomorphisms:
     eigenvalue: 'module.End.has_eigenvalue'
     eigenvector: 'module.End.has_eigenvector'
-    diagonalization: 'https://en.wikipedia.org/wiki/Diagonalizable_matrix'
+    diagonalization: 'is_self_adjoint.diagonalization'
     triangularization: 'https://en.wikipedia.org/wiki/Triangular_matrix#Triangularisability'
     invariant subspaces of an endomorphism: 'https://en.wikipedia.org/wiki/Invariant_subspace'
     generalized eigenspaces: 'module.End.generalized_eigenspace'
@@ -67,7 +67,7 @@ Linear algebra:
     Jordan normal form: 'https://en.wikipedia.org/wiki/Jordan_normal_form'
   Linear representations:
     irreducible representation: 'https://en.wikipedia.org/wiki/Irreducible_representation'
-    Schur's lemma: 'https://en.wikipedia.org/wiki/Schur%27s_lemma'
+    Schur's lemma: `linear_map.bijective_or_eq_zero`, 'category_theory.finrank_endomorphism_simple_eq_one'
     examples: ''
   Exponential:
     endomorphism exponential: ''
@@ -104,7 +104,7 @@ Group Theory:
   Classical automorphism groups:
     general linear group: 'linear_map.general_linear_group'
     special linear group: 'matrix.special_linear_group'
-    orthogonal group: 'matrix.orthogonal_group '
+    orthogonal group: 'matrix.orthogonal_group'
     special orthogonal group: 'https://en.wikipedia.org/wiki/Orthogonal_group#SO(n)'
     unitary group: 'matrix.unitary_group'
     special unitary group: 'https://en.wikipedia.org/wiki/Special_unitary_group'
@@ -207,7 +207,7 @@ Bilinear and Quadratic Forms Over a Vector Space:
     orthogonal elements: 'bilin_form.is_ortho'
     adjoint endomorphism: 'bilin_form.left_adjoint_of_nondegenerate'
     Sylvester's law of inertia: 'https://en.wikipedia.org/wiki/Sylvester%27s_law_of_inertia'
-    real classification: 'https://en.wikipedia.org/wiki/Sylvester%27s_law_of_inertia'
+    real classification: 'quadratic_form.equivalent_one_zero_neg_one_weighted_sum_squared'
     complex classification: ''
     Gram-Schmidt orthogonalisation: 'https://en.wikipedia.org/wiki/Gram%E2%80%93Schmidt_process'
   Euclidean and Hermitian spaces:
@@ -219,7 +219,7 @@ Bilinear and Quadratic Forms Over a Vector Space:
     norm: 'inner_product_space.of_core.to_has_norm'
     orthonormal bases: 'maximal_orthonormal_iff_basis_of_finite_dimensional'
   Endomorphisms:
-    orthogonal group: ''
+    orthogonal group: 'linear_isometry_equiv.group'
     unitary group: ''
     special orthogonal group: ''
     special unitary group: ''
@@ -233,7 +233,7 @@ Bilinear and Quadratic Forms Over a Vector Space:
     polar decompositions in $\mathrm{GL}(n, \C)$: 'https://en.wikipedia.org/wiki/Polar_decomposition'
   Low dimensions:
     cross product: 'cross_product'
-    triple product: 'https://en.wikipedia.org/wiki/Triple_product'
+    triple product: 'triple_product_eq_det'
     classification of elements of $\mathrm{O}(2, \R)$: ''
     classification of elements of $\mathrm{O}(3, \R)$: ''
 
@@ -282,7 +282,7 @@ Single Variable Real Analysis:
   Sequences of real numbers:
     convergence: 'filter.tendsto'
     limit point: 'map_cluster_pt'
-    recurrent sequences: 'nat'
+    recurrent sequences: ''
     limit infimum and supremum: 'order/liminf_limsup.html'
     Cauchy sequences: 'cauchy_seq'
   Topology of R:
@@ -336,11 +336,11 @@ Single Variable Real Analysis:
     inverse trigonometric functions: 'real.arcsin'
     inverse hyperbolic trigonometric functions: 'real.arsinh'
   Integration:
-    integral over a segment of piecewise continuous functions: ''
+    integral over a segment of piecewise continuous functions: 'interval_integral'
     antiderivatives: 'https://en.wikipedia.org/wiki/Antiderivative'
-    Riemann sums: 'https://en.wikipedia.org/wiki/Riemann_sum'
+    Riemann sums: 'box_integral.integral'
     antiderivative of a continuous function: 'interval_integral.integral_has_strict_deriv_at_of_tendsto_ae_right'
-    change of variable: ''
+    change of variable: `lintegral_image_eq_lintegral_abs_det_fderiv_mul`, `integral_image_eq_integral_abs_det_fderiv_smul`
     integration by parts: 'interval_integral.integral_mul_deriv_eq_deriv_mul'
     improper integrals: 'https://en.wikipedia.org/wiki/Improper_integral'
     absolute vs conditional convergence of improper integrals: 'https://en.wikipedia.org/wiki/Conditional_convergence'
@@ -532,19 +532,19 @@ Measures and integral calculus:
 Probability Theory:
   Definitions of a probability space:
     probability measure: 'measure_theory.is_probability_measure'
-    events: ''
+    events: 'set'
     independent events: 'probability_theory.Indep_set'
     sigma-algebra: 'measurable_space'
     independent sigma-algebra: 'probability_theory.Indep'
     $0$-$1$ law: ''
     Borel-Cantelli lemma (easy direction): 'measure_theory.measure_limsup_eq_zero'
     Borel-Cantelli lemma (difficult direction): ''
-    conditional probability: ''
+    conditional probability: 'probability_theory.cond'
     law of total probability: ''
   Random variables and their laws:
     discrete law: 'pmf'
     absolute continuity of probability laws: ''
-    probability density function: ''
+    probability density function: 'measure_theory.has_pdf'
     law of joint probability: ''
     independence of random variables: 'probability_theory.Indep_fun'
     mean and variance of a real-valued random variable: ''
@@ -582,7 +582,7 @@ Distribution calculus:
   Distributions on $\R^d$:
     definition of distributions: ''
     locally integrable functions: ''
-    dirac measures: ''
+    Dirac measures: ''
     Cauchy principal values: ''
     multiplication by a smooth function: ''
     probability distribution function from a dataset: ''
