feat(model_theory/ultraproducts): Ultraproducts and the Compactness Theorem (#12531)
Defines `filter.product`, a dependent version of `filter.germ`.
Defines a structure on an ultraproduct (a `filter.product` with respect to an ultrafilter).
Proves Łoś's Theorem, characterizing when an ultraproduct realizes a formula.
Proves the Compactness theorem with ultraproducts.



Co-authored-by: Aaron Anderson <65780815+awainverse@users.noreply.github.com>

--- a/docs/overview.yaml
+++ b/docs/overview.yaml
@@ -422,3 +422,4 @@ Logic and computation:
     substructure: 'first_order.language.substructure'
     definable set: 'set.definable'
     elementary embedding: 'first_order.language.elementary_embedding'
+    Compactness theorem: 'first_order.language.Theory.is_satisfiable_iff_is_finitely_satisfiable'
