--- a/docs/undergrad.yaml
+++ b/docs/undergrad.yaml
@@ -144,7 +144,7 @@ Ring Theory:
     unique factorisation domain (UFD): 'unique_factorization_monoid'
     greatest common divisor: 'gcd_monoid.gcd'
     least common multiple: 'gcd_monoid.lcm'
-    $A[X]$ is a UFD when $A$ is a UFD: 'polynomial.unique_factorization_monoid'
+    $A[{X_i}]$ is a UFD when $A$ is a UFD: 'mv_polynomial.unique_factorization_monoid'
     principal ideal domain: 'submodule.is_principal'
     Euclidean rings: 'euclidean_domain'
     Euclid's' algorithm: 'nat.xgcd'
