--- a/docs/overview.yaml
+++ b/docs/overview.yaml
@@ -221,8 +221,8 @@ Topology:
     topological group: 'topological_group'
     completion of an abelian topological group: 'uniform_space.completion.add_comm_group '
     infinite sum: 'has_sum'
-    topological (semi)ring: 'topological_semiring'
-    completion of a topological semiring: 'uniform_space.completion.ring'
+    topological ring: 'topological_ring'
+    completion of a topological ring: 'uniform_space.completion.ring'
     topological module: 'has_continuous_smul'
     continuous linear map: 'continuous_linear_map'
     Haar measure on a locally compact Hausdorff group: 'measure_theory.measure.haar_measure'
