--- a/docs/overview.yaml
+++ b/docs/overview.yaml
@@ -233,8 +233,8 @@ Topology:
   Metric spaces:
     metric space: 'metric_space'
     ball: 'metric.ball'
-    sequential compactness is equivalent to compactness (Bolzano-Weierstrass): 'uniform_space.compact_iff_seq_compact'
-    Heine-Borel theorem (proper metric space version): 'metric.compact_iff_closed_bounded'
+    sequential compactness is equivalent to compactness (Bolzano-Weierstrass): 'uniform_space.is_compact_iff_is_seq_compact'
+    Heine-Borel theorem (proper metric space version): 'metric.is_compact_iff_is_closed_bounded'
     Lipschitz continuity: 'lipschitz_with'
     Hölder continuity: 'holder_with'
     contraction mapping theorem: 'contracting_with.exists_fixed_point'
