--- a/docs/overview.yaml
+++ b/docs/overview.yaml
@@ -211,7 +211,8 @@ Topology:
     connectedness: 'connected_space'
     compact open topology: 'continuous_map.compact_open'
     Stone-Cech compactification: 'stone_cech'
-    topological fiber bundle: 'is_topological_fiber_bundle'
+    topological fiber bundle: 'fiber_bundle'
+    topological vector bundle: 'vector_bundle'
     Urysohn's lemma: 'exists_continuous_zero_one_of_closed'
     Stone-Weierstrass theorem: 'continuous_map.subalgebra_topological_closure_eq_top_of_separates_points'
   Uniform notions:
