--- a/docs/undergrad.yaml
+++ b/docs/undergrad.yaml
@@ -351,7 +351,7 @@ Single Variable Real Analysis:
     continuity of the limit: 'continuous_of_uniform_approx_of_continuous'
     differentiability of the limit: 'https://en.wikipedia.org/wiki/Uniform_convergence#To_differentiability'
     Weierstrass polynomial approximation theorem: 'polynomial_functions_closure_eq_top'
-    Weierstrass trigonometric approximation theorem: 'span_fourier_closure_eq_top'
+    Weierstrass trigonometric approximation theorem: 'add_circle.span_fourier_closure_eq_top'
   Convexity:
     convex functions of a real variable: 'convex_on'
     continuity and differentiability of convex functions: 'https://en.wikipedia.org/wiki/Convex_function#Functions_of_one_variable'
@@ -434,7 +434,7 @@ Topology:
     inner product space $L^2$: 'measure_theory.L2.inner_product_space'
     its completeness: 'measure_theory.Lp.complete_space'
     Hilbert bases: 'hilbert_basis' # the document specifies "in the separable case" but we don't require this
-    example, the Hilbert basis of trigonometric polynomials: 'fourier_series'
+    example, the Hilbert basis of trigonometric polynomials: 'add_circle.fourier_series'
     example, classical Hilbert bases of orthogonal polynomials: ''
     Lax-Milgram theorem: 'is_coercive.continuous_linear_equiv_of_bilin'
     $H^1_0([0,1])$ and its application to the one-dimensional Dirichlet problem: ''
@@ -519,12 +519,12 @@ Measures and integral calculus:
     approximation by convolution: 'cont_diff_bump_of_inner.convolution_tendsto_right'
     regularization by convolution: 'has_compact_support.cont_diff_convolution_left'
   Fourier analysis:
-    Fourier series of locally integrable periodic real-valued functions: ''
+    Fourier series of locally integrable periodic real-valued functions: 'add_circle.fourier_series'
     Riemann-Lebesgue lemma: ''
     convolution product of periodic functions: ''
     Dirichlet theorem: ''
     Fejer theorem: ''
-    Parseval theorem: 'tsum_sq_fourier_series_repr'
+    Parseval theorem: 'add_circle.tsum_sq_fourier_series_repr'
     Fourier transforms on $\mathrm{L}^1(\R^d)$ and $\mathrm{L}^2(\R^d)$: ''
     Plancherel’s theorem: ''
 
@@ -664,4 +664,3 @@ Numerical Analysis:
   Fourier transform:
     discrete Fourier transform on a finite abelian group: ''
     fast Fourier transform: ''
-   
