--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -32,3 +32,6 @@ jobs:
           base: master
           commit-message: "chore(*): add mathlibport comments"
           title: "chore(*): add mathlibport comments"
+          body: |
+            Regenerated from the [port status wiki page](https://github.com/leanprover-community/mathlib/wiki/mathlib4-port-status) 
+          labels: [easy, mathlib4-synchronization]
