--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -35,5 +35,6 @@ jobs:
           body: |
             Regenerated from the [port status wiki page](https://github.com/leanprover-community/mathlib/wiki/mathlib4-port-status) 
           labels: |
-            easy,
+            easy
+            awaiting-review
             mathlib4-synchronization
