--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -29,7 +29,7 @@ jobs:
       - name: generate message
         id: message
         run: |
-          PR_LIST="$(git diff HEAD -U0 | grep -o -e 'https://github.com/leanprover-community/mathlib4/pull/[0-9]\+'  | awk '{print "* " $0}')
+          PR_LIST="$(git diff HEAD -U0 | grep -o -e 'https://github.com/leanprover-community/mathlib4/pull/[0-9]\+'  | awk '{print "* " $0}')"
           echo "PR_LIST=$PR_LIST" >> $GITHUB_OUTPUT
 
       - name: Create Pull Request
