--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           PR_LIST="$(git diff HEAD -U0 | grep -o -e 'https://github.com/leanprover-community/mathlib4/pull/[0-9]\+'  | awk '{print "* " $0}')"
           echo "PR_LIST=$(printf "%q" "$PR_LIST")" >> $GITHUB_OUTPUT
+          echo "$PR_LIST"
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
