--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -27,7 +27,7 @@ jobs:
           python ./scripts/add_port_comments.py
 
       - name: generate message
-        id: message
+        id: generate-message
         run: |
           PR_LIST="$(git diff HEAD -U0 | grep -o -e 'https://github.com/leanprover-community/mathlib4/pull/[0-9]\+'  | awk '{print "* " $0}')"
           echo "PR_LIST=$(printf "%q" "$PR_LIST")" >> $GITHUB_OUTPUT
@@ -42,7 +42,10 @@ jobs:
           body: |
             Regenerated from the [port status wiki page](https://github.com/leanprover-community/mathlib/wiki/mathlib4-port-status).
             Relates to the following PRs:
-            ${{ steps.message-generator.outputs.PR_LIST }}
+            ${{ steps.generate-message.outputs.PR_LIST }}
+
+            ---
+            I am a bot; please check that I have not put a comment in a bad place before running `bors merge`!
           labels: |
             easy
             awaiting-review
