--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -37,10 +37,10 @@ jobs:
         id: generate-message
         with:
           script: |
-            let prs = exec.getExecOutput(
+            var prs = exec.getExecOutput(
               "git diff HEAD -U0 | grep -o -e 'https://github.com/leanprover-community/mathlib4/pull/[0-9]\+'");
-            console.log(prs.stdout)
-            console.log(prs.stderr)
+            console.log(prs.stdout);
+            console.log(prs.stderr);
             # Assuming we have a `content` environment variable or output of previous step
             core.setOutput("PR_LIST", prs.stdout); 
 
