--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -38,10 +38,10 @@ jobs:
         with:
           script: |
             prs = exec.getExecOutput("bash",
-              ['-c', "git diff HEAD -U0 | grep -o -e 'https://github.com/leanprover-community/mathlib4/pull/\\d+'"]);
-            console.log(prs.stdout);
-            console.log(prs.stderr);
-            core.setOutput("PR_LIST", prs.stdout); 
+              ['-c', "git diff HEAD -U0 | grep -o -e 'https://github.com/leanprover-community/mathlib4/pull/[0-9]+'"]);
+            pr_bullets = prs.stdout.split('\n').map(x => "* " + x).join('\n'); 
+            console.log(pr_bullets);
+            core.setOutput("PR_LIST", pr_bullets); 
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
