--- a/docs/undergrad.yaml
+++ b/docs/undergrad.yaml
@@ -348,8 +348,10 @@ Single Variable Real Analysis:
     pointwise convergence: 'tendsto_pi_nhds'
     uniform convergence: 'tendsto_uniformly'
     normal convergence: 'https://en.wikipedia.org/wiki/Normal_convergence'
-    continuity of the limit: 'continuous_of_uniform_approx_of_continuous'
-    differentiability of the limit: 'https://en.wikipedia.org/wiki/Uniform_convergence#To_differentiability'
+    continuity of the limit of a sequence of functions: 'continuous_of_uniform_approx_of_continuous'
+    continuity of the sum of a series of functions: 'continuous_tsum'
+    differentiability of the limit of a sequence of functions: 'has_fderiv_at_of_tendsto_uniformly'
+    differentiability of the sum of a series of functions: 'differentiable_tsum'
     Weierstrass polynomial approximation theorem: 'polynomial_functions_closure_eq_top'
     Weierstrass trigonometric approximation theorem: 'span_fourier_closure_eq_top'
   Convexity:
@@ -664,4 +666,3 @@ Numerical Analysis:
   Fourier transform:
     discrete Fourier transform on a finite abelian group: ''
     fast Fourier transform: ''
-   
