--- a/.github/workflows/add_port_comment.yml
+++ b/.github/workflows/add_port_comment.yml
@@ -27,9 +27,9 @@ jobs:
         id: generate-message
         with:
           script: |
-            pr_list = await exec.getExecOutput("python", ["./scripts/add_port_comments.py"]);
-            console.log(pr_list);
-            core.setOutput("PR_LIST", pr_list); 
+            proc = await exec.getExecOutput("python", ["./scripts/add_port_comments.py"]);
+            console.log(proc.stdout);
+            core.setOutput("PR_LIST", proc.stdout); 
 
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
