--- a/docs/100.yaml
+++ b/docs/100.yaml
@@ -297,8 +297,8 @@
 76:
   title  : Fourier Series
   decls   :
-    - add_circle.fourier_series_repr
-    - add_circle.has_sum_fourier_series
+    - fourier_series_repr
+    - has_sum_fourier_series
   author : Heather Macbeth
 77:
   title  : Sum of kth powers
