feat (analysis/fourier): Fourier analysis on the additive circle (#17598)
This ticket rewrites the existing `analysis.fourier` file to base things on the additive circle `add_circle T = ℝ / ℤ • T` rather than the unit circle in `ℂ` as before. This makes it much easier to actually evaluate Fourier coefficients, because we can link up with the huge library of lemmas about integration on subsets of ℝ.

I've tried to keep the main part of Heather's code much as it was before; I did refactor one lemma about conjugation-invariant subalgebras of `C(X, ℂ)`, moving the bulk of it into `stone_weierstrass`.

--- a/docs/undergrad.yaml
+++ b/docs/undergrad.yaml
@@ -500,7 +500,7 @@ Measures and integral calculus:
     Lebesgue measure: 'measure_theory.measure_space'
     product measure: 'measurable_space.pi'
     measurable functions: 'measurable'
-    approximation by step functions: 'measure_theory/simple_func_dense.html'
+    approximation by step functions: 'measure_theory.simple_func.tendsto_approx_on'
   Integration:
     integral of positive measurable functions: 'measure_theory.lintegral'
     monotone convergence theorem: 'measure_theory.lintegral_infi_ae'
@@ -521,7 +521,7 @@ Measures and integral calculus:
     approximation by convolution: 'cont_diff_bump_of_inner.convolution_tendsto_right'
     regularization by convolution: 'has_compact_support.cont_diff_convolution_left'
   Fourier analysis:
-    Fourier series of locally integrable periodic real-valued functions: ''
+    Fourier series of locally integrable periodic real-valued functions: 'fourier_series'
     Riemann-Lebesgue lemma: ''
     convolution product of periodic functions: ''
     Dirichlet theorem: ''
