--- a/.github/workflows/add_ported_warnings.yml
+++ b/.github/workflows/add_ported_warnings.yml
@@ -19,7 +19,10 @@ jobs:
         run: |
           pip install git+https://github.com/leanprover-community/mathlib-tools
 
-      # multiline outputs are only supported in javascript
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v34
+
       - name: run the script
         run: |
-          python scripts/detect_ported_files.py
+          python scripts/detect_ported_files.py ${{ steps.changed-files.outputs.all_changed_files }}
