--- a/.github/workflows/add_ported_warnings.yml
+++ b/.github/workflows/add_ported_warnings.yml
@@ -19,11 +19,10 @@ jobs:
         run: |
           pip install git+https://github.com/leanprover-community/mathlib-tools
 
+      # TODO: is this really faster than just calling git from python?
       - name: Get changed files
         id: changed-files
         uses: tj-actions/changed-files@v34
-        with:
-          base_sha: ${{ github.event.pull_request.base.sha }}
 
       - name: run the script
         run: |
